--- a/angular/ng-food/src/app/app.component.html
+++ b/angular/ng-food/src/app/app.component.html
@@ -1,3 +1,7 @@
 <ngf-header></ngf-header>
-<ngf-content></ngf-content>
+
+<main class="container">
+  <router-outlet></router-outlet>
+</main>
+
 <ngf-footer></ngf-footer>
