02/05 exercicios da semana 8 que estavam faltando

--- a/angular/ng-food/src/app/components/footer/footer.component.html
+++ b/angular/ng-food/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- rodapé -->
-<footer class="text-muted py-5">
+<footer class="footer mt-auto py-3">
   <div class="container text-center">
-    <p class="mb-1">© 2022 DEVInhouse</p>
+    <p class="text-muted">© 2022 DEVInhouse</p>
   </div>
 </footer>
