--- a/angular/ng-food/src/app/components/header/header.component.html
+++ b/angular/ng-food/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- cabecalho -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">NOTIFICATION-APP</a>
+    <a class="navbar-brand" href="#">NG-FOOD</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -19,7 +19,17 @@
           <a class="nav-link active" aria-current="page" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/sobre">Sobre</a>
+          <a class="nav-link" aria-current="page" routerLink="/sobre">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/comidas"
+            >Comidas</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/bebidas"
+            >Bebidas</a
+          >
         </li>
       </ul>
     </div>
