--- a/angular/ng-food/src/app/components/content/content.component.html
+++ b/angular/ng-food/src/app/components/content/content.component.html
@@ -1,25 +1,16 @@
 <!-- conteúdo -->
-<div class="list-group">
-  <a
-    *ngFor="let item of listaDeNotificacoes"
-    (click)="chamarClique()"
-    href="#"
-    class="list-group-item list-group-item-action d-flex gap-3 py-3"
-    aria-current="true"
-  >
-    <img
-      src="{{ item.imagem }}"
-      alt="twbs"
-      width="32"
-      height="32"
-      class="rounded-circle flex-shrink-0"
-    />
-    <div class="d-flex gap-2 w-100 justify-content-between">
-      <div>
-        <h6 class="mb-0">{{ item.titulo }}</h6>
-        <p class="mb-0 opacity-75">{{ item.descricao }}</p>
+
+<div class="album py-5">
+  <div class="container">
+    <div class="row row justify-content-evenly row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="col" *ngFor="let item of listaDeOpcoes">
+        <div class="card shadow-sm">
+          <img src="{{ item.imagem }}" alt="comidas" />
+          <div class="card-body">
+            <p class="card-text text-center">{{ item.nome }}</p>
+          </div>
+        </div>
       </div>
-      <small class="opacity-50 text-nowrap">now</small>
     </div>
-  </a>
+  </div>
 </div>
