--- a/oitava semana/angular/ng-food/src/app/components/content/content.component.html
+++ b/oitava semana/angular/ng-food/src/app/components/content/content.component.html
@@ -5,7 +5,7 @@
     <div class="row row justify-content-evenly row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col" *ngFor="let item of listaDeOpcoes">
         <div class="card shadow-sm">
-          <img src="{{ item.imagem }}" alt="comidas" />
+          <img src="{{ item.imagem }}" alt="{{ item.nome }}" />
           <div class="card-body">
             <p class="card-text text-center">{{ item.nome }}</p>
           </div>
