--- a/oitava-decima semana/angular/ng-food/src/app/app.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/app.component.html
@@ -3,5 +3,6 @@
 <main class="container">
   <router-outlet></router-outlet>
 </main>
+<!-- faz com que a página carregue o caminho selecionado-->
 
 <ngf-footer></ngf-footer>
