--- a/oitava-decima semana/angular/ng-food/src/app/components/header/header.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/components/header/header.component.html
@@ -16,20 +16,55 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink=""
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Cardápio</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/sobre">Sobre</a>
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLinkActive="active"
+            routerLink="/sobre"
+            >Sobre</a
+          >
+          <!-- routerLink é o que faz ir para a página, active é o que faz aparecer clicado -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/comidas"
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLinkActive="active"
+            routerLink="/comidas"
             >Comidas</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/bebidas"
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLinkActive="active"
+            routerLink="/bebidas"
             >Bebidas</a
           >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLinkActive="active"
+            routerLink="/pedidos"
+          >
+            <span class="badge rounded-pill bg-danger"
+              >{{ quantidadePedidos }}
+            </span>
+            Pedido
+          </a>
         </li>
       </ul>
     </div>
