--- a/oitava-decima semana/angular/ng-food/src/app/components/header/header.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/components/header/header.component.html
@@ -61,7 +61,7 @@
             routerLink="/pedidos"
           >
             <span class="badge rounded-pill bg-danger"
-              >{{ quantidadePedidos }}
+              >{{ buscarTotalItem() }}
             </span>
             Pedido
           </a>
