--- a/oitava-decima semana/angular/ng-food/src/app/components/item-cardapio/item-cardapio.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/components/item-cardapio/item-cardapio.component.html
@@ -7,7 +7,11 @@
       </p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-secondary">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-secondary"
+            (click)="addListaPedido()"
+          >
             Adicionar ao pedido
           </button>
           <button type="button" class="btn btn-sm btn-outline-secondary">
