--- a/oitava-decima semana/angular/ng-food/src/app/pages/comidas/comidas.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/pages/comidas/comidas.component.html
@@ -4,22 +4,8 @@
       <ngf-item-cardapio
         [itemCardapio]="item"
         *ngFor="let item of listaComidas"
+        (adicionaListaPedido)="addComida($event)"
       ></ngf-item-cardapio>
-      <!--  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="{{ item.imagem }}" alt="" />
-              <div class="card-body">
-                <p class="card-text">
-                  {{ item.descricao }}
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">{{ item.preco }}</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
     </div>
   </div>
 </div>
