--- a/oitava-decima semana/angular/ng-food/src/app/components/footer/footer.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/components/footer/footer.component.html
@@ -1,6 +1,8 @@
 <!-- rodapé -->
-<footer class="footer mt-auto py-3">
-  <div class="container text-center">
-    <p class="text-muted">© 2022 DEVInhouse</p>
+<footer class="container">
+  <div class="row">
+    <div class="col-md">
+      <small class="d-block mb-3 text-muted">&copy; DEVinHouse 2022</small>
+    </div>
   </div>
 </footer>
