--- a/oitava-decima semana/angular/ng-food/src/app/pages/pedidos/pedidos.component.html
+++ b/oitava-decima semana/angular/ng-food/src/app/pages/pedidos/pedidos.component.html
@@ -1,10 +1,39 @@
 <div class="pedido">
-  <div class="list-group">
-    <div *ngIf="listaItensPedido.length === 0" class="row">
-      <p>Não há pedido adicionados</p>
+  <div
+    class="modal modal-sheet position-static d-block py-5"
+    tabindex="-1"
+    role="dialog"
+    id="modalSheet"
+    *ngIf="listaItensPedido.length === 0"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-6 shadow">
+        <div class="modal-header border-bottom-0">
+          <h5 class="modal-title">Seu pedido está vazio!</h5>
+        </div>
+        <div class="modal-body py-0">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum,
+            pariatur repudiandae deserunt accusantium facere provident, iure
+            rerum repellat nam, perspiciatis quia necessitatibus voluptas rem
+            suscipit quaerat animi perferendis magni ullam.
+          </p>
+        </div>
+        <div class="modal-footer flex-column border-top-0">
+          <button
+            type="button"
+            class="btn btn-danger btn-lg btn-primary w-100 mx-0 mb-2"
+            routerLink=""
+          >
+            Ir para o cardápio!
+          </button>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="list-group">
     <div *ngFor="let item of listaItensPedido">
-      <a class="list-group-item d-flex gap-3 py-3" aria-current="true">
+      <a class="list-group-item d-flex gap-3 py-3">
         <img
           src="{{ item.imagem }}"
           alt="twbs"
@@ -24,7 +53,7 @@
           <small class="text-nowrap"
             ><button
               type="button"
-              class="btn btn-sm btn-danger btn-outline-secondary"
+              class="btn btn-sm btn-danger"
               (click)="removerItem(item)"
             >
               remover
@@ -35,9 +64,13 @@
     </div>
     <br />
     <div *ngIf="listaItensPedido.length != 0">
-      <a class="list-group-item d-flex gap-3 py-3" aria-current="true"
+      <a
+        class="list-group-item d-flex gap-3 justify-content-around"
+        aria-current="true"
         ><button class="btn btn-danger" type="button" (click)="apagarTudo()">
-          Apagar lista de pedidos
+          Apagar lista de pedido</button
+        ><button class="btn btn-success" type="button">
+          Finalizar pedido
         </button></a
       >
     </div>
